refactor: ServerWorldMixin
- replaced .removeFirst() with .remove(0), as they're basically the same thing